# tibamkononi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-hf.txt  requirements-minimal.txt  requirements.txt  seed_data.py  seed_production.py
alembic/: env.py
app/: __init__.py  config.py  main.py
app/ai/: __init__.py  engine.py  prompts.py  services.py
app/api/: __init__.py  deps.py
app/api/v1/: announcements.py  appointments.py  auth.py  county.py  distress.py  emergency.py  hospitals.py  inventory.py  router.py  staff.py  triage.py
app/core/: __init__.py  celery_app.py  database.py  logging_config.py  redis.py  security.py  storage.py
app/models/: __init__.py  announcement.py  appointment.py  base.py  county.py  distress_signal.py  emergency.py  hospital.py  inventory.py  patient.py  report.py  staff.py  supplier.py  triage_log.py  user.py
app/schemas/: __init__.py  appointment.py
app/services/: __init__.py  announcement_service.py  appointment_service.py  county_service.py  distress_service.py  emergency_service.py  hospital_service.py  inventory_service.py  patient_service.py  staff_service.py
app/tasks/: __init__.py  forecast_demand.py  generate_reports.py  process_emergency.py  send_notifications.py  sync_inventory.py
app/utils/: __init__.py  enums.py  geo.py
