[project]
name = "tiba-mkononi"
version = "0.1.0"
description = "Tiba Mkononi - Healthcare in Your Hands"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
